# fundamental-dashboard

backend/: .env  index.py  pyproject.toml
backend/config/: db.py
backend/controllers/: candles.py  ratings.py
backend/models/: note.py
backend/routes/: candles.py  note.py  ratings.py
backend/schemas/: candles.py  note.py
frontend/: .env  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/apis/: technicals.js
frontend/src/components/: RatingTable.jsx  ResultsTable.jsx  index.js
frontend/src/components/layout/: DashboardLayout.jsx
frontend/src/config/: axios.js
frontend/src/pages/: CurrencyPulse.jsx  HeatMapPage.jsx  RatingPage.jsx  TechnicalResults.jsx  index.js
frontend/src/store/: rootReducer.js  store.js
frontend/src/store/slicers/: authSlice.js  technicalSlice.js
frontend/src/utils/: constants.js
