[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "metatrader5>=5.0.5200",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "ta>=0.11.0",
    "tradingview-ta>=3.3.0",
    "uvicorn>=0.35.0",
]
